# flask-book

./: pyproject.toml
src/: manage.py
src/apps/books/: models.py  routes.py  schema.py  views.py
src/core/: config.py  factory.py
src/migrations/versions/: 462ee37e6dad_initial_migration.py
